# AIRating

./: README.md
Evaluations/: Datasets  Impaakt_data_processing.py  Impaakt_evaluation_formatting.py
QA/: .airaiting7.py.swp  20230125_tr_topic_20_percent.csv  20230125_tr_topic_category_20_percent.csv  README.md  airaiting1.py  airaiting2.py  airaiting3.py  airaiting4.py  airaiting5.py  airaiting6.py  airaiting7.py  airaiting8.py  airaiting9.py  csvcut.py  datapoints_2024-01-16T15 25 08.159208+01 00_20_percent.csv  generated_answers.txt  generated_questions.txt  query_result_2024-01-16T15 25 39.093368+01 00_20_percent.csv
annotator/: .dockerignore  .gitignore  README.md  common-services.yml  compose.dev.yml
annotator/images/: .env.swp  env  requirements.txt
annotator/images/pytorch/: Dockerfile
annotator/service/app/app/: main.py
annotator/service/app/app/core/: celery.py  config.py
annotator/service/app/app/models/: job.py  source.py
annotator/service/app/app/schemas/: job.py  source.py
annotator/service/app/app/tasks/: company.py  entity.py  impaakt.py  job.py  text.py  topic.py
code/crawler/: README.md
code/crawler/src/crawler/: 1_download_ccindexes.py  2_make_ccmasters.py  3_download.py  4_extract_pages.py  __init__.py  functions.py  params.py
code/crawler/src/crawler/data/: news.txt  (+1 more)
company_NER_api/: README.md  app.py  requirements.txt
company_score_api/: README.md  app.py  doc_sample_companyNER.json  doc_sample_company_score.json  requirements.txt
crawler/: pyproject.toml
crawler/src/crawler/data/: cc_monthly_indexes.txt
(+2 files in other folders)
