[project]
name = "crawler"
version = "0.1.0"
description = "Website crawler with Commoncrawl."
authors = [
    { name = "jgobeill", email = "48920425+jgobeill@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "warcio>=1.7.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crawler"]
